# CppCode

./: README.md
AddressBookManagementSystem/: CMakeLists.txt  README.md  main  main.cpp
SpeechContestProcessManagementSystem/: CMakeLists.txt  README.md  main.cpp
SpeechContestProcessManagementSystem/sources/: speaker.h  speechManager.cpp  speechManager.h
StaffManagementSystem/: CMakeLists.txt  README.md  main.cpp
StaffManagementSystem/header/: boss.h  employee.h  manager.h  workManager.h  worker.h
StaffManagementSystem/source/: boss.cpp  employee.cpp  manager.cpp  workManager.cpp
beginToLearn/: CMakeLists.txt  README.md  main.cpp
beginToLearn/advance_project/: README.md  main.cpp
beginToLearn/advance_project/header/: MyArray.hpp  class_template_and_friend.hpp  man.hpp  woman.h
beginToLearn/advance_project/source/: woman.cpp
beginToLearn/basic_project/: README.md  main.cpp
beginToLearn/basic_project/include/: basic_extend.cpp  basic_extend.h
beginToLearn/class_objects_project/: Inheritance.cpp  README.md  main.cpp  point.cpp  polymorphism.cpp
beginToLearn/class_objects_project/head/: Inheritance.h  point.h  polymorphism.h
beginToLearn/file_operation/: README.md  main.cpp
beginToLearn/include/: swap.cpp  swap.h
beginToLearn/stl_project/: README.md  main.cpp
beginToLearn/struct_project/: README.md  main.cpp  project1.cpp  project1.h  project2.cpp  project2.h
